# geoip2-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: geoip.rs
codegen/: Cargo.toml  README.md
codegen/src/: lib.rs
examples/: lookup.rs
src/: decoder.rs  errors.rs  lib.rs  metadata.rs  models.rs  reader.rs
tests/: dbip.rs  geoip.rs
