[package]
name = "geoip2-codegen"
version = "0.1.3"
authors = ["IncSW <dev@incsw.in>"]
description = "geoip2 macros"
readme = "README.md"
homepage = "https://github.com/IncSW/geoip2-rs"
documentation = "https://docs.rs/geoip2-codegen"
repository = "https://github.com/IncSW/geoip2-rs"
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.75", features = ["full", "extra-traits"] }
quote = "1.0.9"
proc-macro2 = "1.0.28"
